game add route en cours commit

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
 
         <div th:if="${errorMessage}"
              th:text="${errorMessage}"
-             class="mb-4 text-red-600 font-medium">
+             class="mb-4 text-red-600 font-medium text-center">
         </div>
 
         <!-- Form Area -->
