--- a/src/main/resources/templates/users/homepage.html
+++ b/src/main/resources/templates/users/homepage.html
@@ -22,7 +22,7 @@
         <h1 class="text-3xl font-bold tracking-tight">Dashboard</h1>
         <p class="text-gray-400 mt-1">Overview of your tournaments and users</p>
     </div>
-    <a href="#" class="flex items-center justify-start p-2 rounded-md h-min bg-purple-800">
+    <a href="/tournament/add" class="flex items-center justify-start p-2 rounded-md h-min bg-purple-800">
         <svg class="h-8 w-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path opacity="0.5" d="M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z" fill="currentColor"/>
             <path d="M12.75 9C12.75 8.58579 12.4142 8.25 12 8.25C11.5858 8.25 11.25 8.58579 11.25 9L11.25 11.25H9C8.58579 11.25 8.25 11.5858 8.25 12C8.25 12.4142 8.58579 12.75 9 12.75H11.25V15C11.25 15.4142 11.5858 15.75 12 15.75C12.4142 15.75 12.75 15.4142 12.75 15L12.75 12.75H15C15.4142 12.75 15.75 12.4142 15.75 12C15.75 11.5858 15.4142 11.25 15 11.25H12.75V9Z" fill="currentColor"/>
@@ -37,7 +37,11 @@
         <p th:text="${totalUsers ?: 42}" class="text-4xl font-bold text-white">42</p>
     </div>
     <div class="bg-gray-800 rounded-2xl shadow-lg border border-gray-700 p-6">
-        <h2 class="text-gray-400 text-sm font-medium mb-2">Tournaments Created</h2>
+        <h2 class="text-gray-400 text-sm font-medium mb-2">
+            <a class="hover:bg-gray-900 rounded-md p-2" href="/tournaments">
+                Tournaments Created
+            </a>
+        </h2>
         <p th:text="${countTournament ?: 7}" class="text-4xl font-bold text-white">7</p>
     </div>
     <div class="bg-gray-800 rounded-2xl shadow-lg border border-gray-700 p-6 flex flex-col ">
